// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssociatedSegmentsCard should render 1`] = `
<Card
  className="associated-segments-card-root"
>
  <Header>
    <Title>
      Associated Segments
    </Title>
  </Header>
  <Body>
    <SearchInput
      disabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="Search"
      value=""
    />
  </Body>
  <div
    className="content"
  >
    <EntityList
      disabledItemsISet={Immutable.Set []}
      groupId="23"
      items={
        Array [
          Object {
            "activeIndividualCount": 0,
            "activitiesCount": 1000,
            "anonymousIndividualCount": 0,
            "dateCreated": 1531177266366,
            "dateModified": 1531263666366,
            "engagementScore": 0.4899,
            "id": "0",
            "includeAnonymousUsers": false,
            "individualCount": 10,
            "knownIndividualCount": 0,
            "lastActivityDate": 1531263666366,
            "name": "Seattle0",
            "properties": Object {},
            "state": "READY",
            "type": 4,
          },
          Object {
            "activeIndividualCount": 0,
            "activitiesCount": 1000,
            "anonymousIndividualCount": 0,
            "dateCreated": 1531177266366,
            "dateModified": 1531263666366,
            "engagementScore": 0.4899,
            "id": "1",
            "includeAnonymousUsers": false,
            "individualCount": 10,
            "knownIndividualCount": 0,
            "lastActivityDate": 1531263666366,
            "name": "Seattle1",
            "properties": Object {},
            "state": "READY",
            "type": 4,
          },
        ]
      }
      loading={false}
      selectMultiple={true}
      selectedItemsISet={Immutable.Set []}
      showBorder={true}
      showHeader={true}
    />
  </div>
  <Footer>
    <Button
      display="link"
      href="/foo"
      size="sm"
    >
      View All Segments
      <Icon
        symbol="angle-right"
      />
    </Button>
  </Footer>
</Card>
`;

exports[`AssociatedSegmentsCard should render w/ loading overlay 1`] = `
<Card
  className="associated-segments-card-root"
>
  <Header>
    <Title>
      Associated Segments
    </Title>
  </Header>
  <Body>
    <SearchInput
      disabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="Search"
      value=""
    />
  </Body>
  <div
    className="content"
  >
    <Spinner
      alignCenter={false}
      display="dotted"
      fadeIn={false}
      inline={false}
      light={false}
      overlay={true}
      spacer={false}
    />
  </div>
  <Footer>
    <Button
      display="link"
      href="/foo"
      size="sm"
    >
      View All Segments
      <Icon
        symbol="angle-right"
      />
    </Button>
  </Footer>
</Card>
`;

exports[`AssociatedSegmentsCard should render with an error display 1`] = `
<Card
  className="associated-segments-card-root"
>
  <Header>
    <Title>
      Associated Segments
    </Title>
  </Header>
  <Body>
    <SearchInput
      disabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="Search"
      value=""
    />
  </Body>
  <div
    className="content"
  >
    <ErrorDisplay
      buttonLabel="Reload"
      key="ERROR_DISPLAY"
      message="An unexpected error occurred."
      onReload={[Function]}
      spacer={true}
    />
  </div>
  <Footer>
    <Button
      display="link"
      href="/foo"
      size="sm"
    >
      View All Segments
      <Icon
        symbol="angle-right"
      />
    </Button>
  </Footer>
</Card>
`;

exports[`AssociatedSegmentsCard should render with an no results display 1`] = `
<Card
  className="associated-segments-card-root"
>
  <Header>
    <Title>
      Associated Segments
    </Title>
  </Header>
  <Body>
    <SearchInput
      disabled={false}
      onChange={[Function]}
      onSubmit={[Function]}
      placeholder="Search"
      value=""
    />
  </Body>
  <div
    className="content"
  >
    <NoResultsDisplay
      spacer={true}
      title="There are no Segments found."
    />
  </div>
  <Footer>
    <Button
      display="link"
      href="/foo"
      size="sm"
    >
      View All Segments
      <Icon
        symbol="angle-right"
      />
    </Button>
  </Footer>
</Card>
`;
